# PAOO

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Department/: CMakeLists.txt  Department.cpp  Department.hpp
src/People/Person/: Person.cpp
src/People/Student/: CMakeLists.txt  Student.cpp  Student.hpp
src/People/Teacher/: CMakeLists.txt  Teacher.cpp  Teacher.hpp
src/Person/: CMakeLists.txt  Person.hpp
src/Student/: Student.cpp  Student.hpp
src/Subject/: CMakeLists.txt  Subject.cpp  Subject.hpp
src/Teacher/: Teacher.cpp  Teacher.hpp
